[gd_scene load_steps=4 format=3 uid="uid://crdbtmmq4ni45"]

[ext_resource type="Script" path="res://scenes/main_screen.gd" id="1_ori5v"]
[ext_resource type="PackedScene" uid="uid://b55c1nbgf2h1y" path="res://scenes/marker_map.tscn" id="2_nqqfv"]
[ext_resource type="Theme" uid="uid://cybssocn771kw" path="res://theme.tres" id="3_x6e23"]

[node name="MainScreen" type="Node"]
script = ExtResource("1_ori5v")

[node name="MarkerMap" parent="." instance=ExtResource("2_nqqfv")]

[node name="Game" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -27.0
offset_right = 27.0
offset_bottom = 31.0
grow_horizontal = 2
theme = ExtResource("3_x6e23")
text = "Game	"

[node name="Info" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme = ExtResource("3_x6e23")
theme_override_constants/separation = 5

[node name="Stardate" type="Label" parent="Info"]
layout_mode = 2
size_flags_horizontal = 4
text = "Date 3500.0"

[node name="Money" type="Label" parent="Info"]
layout_mode = 2
text = "Money 50 BC +7 BC"
horizontal_alignment = 1

[node name="Food" type="Label" parent="Info"]
layout_mode = 2
text = "Food +0"
horizontal_alignment = 1

[node name="Freighters" type="Label" parent="Info"]
layout_mode = 2
text = "Freighters +0 (0)"
horizontal_alignment = 1

[node name="Research" type="Label" parent="Info"]
layout_mode = 2
text = "Research none"
horizontal_alignment = 1

[node name="MenuPanel" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -292.0
offset_top = -45.0
offset_right = 292.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_x6e23")
theme_override_constants/separation = 5

[node name="Colonies" type="Button" parent="MenuPanel"]
layout_mode = 2
text = "Colonies"

[node name="Planets" type="Button" parent="MenuPanel"]
layout_mode = 2
text = "Planets
"

[node name="Fleets" type="Button" parent="MenuPanel"]
layout_mode = 2
text = "Fleets"

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Up" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "^"

[node name="Down" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "v"

[node name="Leaders" type="Button" parent="MenuPanel"]
layout_mode = 2
text = "Leaders"

[node name="Races" type="Button" parent="MenuPanel"]
layout_mode = 2
text = "Races"

[node name="Info" type="Button" parent="MenuPanel"]
layout_mode = 2
text = "Info"

[node name="Turn" type="Button" parent="MenuPanel"]
layout_mode = 2
text = "End Turn"

[node name="GameMenu" type="Window" parent="."]
initial_position = 2
size = Vector2i(300, 300)
visible = false
transient = true
exclusive = true
borderless = true
popup_window = true
theme = ExtResource("3_x6e23")

[node name="VBoxContainer" type="VBoxContainer" parent="GameMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Save" type="Button" parent="GameMenu/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Save Game"

[node name="Load" type="Button" parent="GameMenu/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Load Gane
"

[node name="New" type="Button" parent="GameMenu/VBoxContainer"]
layout_mode = 2
disabled = true
text = "New Game"

[node name="Quit" type="Button" parent="GameMenu/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Quit Game"

[node name="Settings" type="Button" parent="GameMenu/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Settings"

[node name="Return" type="Button" parent="GameMenu/VBoxContainer"]
layout_mode = 2
text = "Return
"

[connection signal="pressed" from="Game" to="." method="_on_game_pressed"]
[connection signal="close_requested" from="GameMenu" to="." method="_on_return_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/Return" to="." method="_on_return_pressed"]
